commit for MS-416 (client details not saved)